deployment/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-ingress-django-auth
  labels:
    app: nginx-ingress-django-auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-ingress-django-auth
  template:
    metadata:
      labels:
        app: nginx-ingress-django-auth
    spec:
      containers:
        - image: gabrielmilan/nginx-ingress-django-auth:v0.0.1
          name: nginx-ingress-django-auth
          ports:
            - containerPort: 80
              protocol: TCP
