deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-ingress-django-auth
  labels:
    app: nginx-ingress-django-auth
spec:
  type: ClusterIP
  selector:
    app: nginx-ingress-django-auth
  ports:
    - name: http
      port: 80
      targetPort: 80
